Salesforce /unpackaged/main/default/objects/Opportunity/fields/Opportunity_Submitted_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Submitted_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunity Submitted For Approval.</description>
    <label>Opportunity Submitted For Approval</label>
    <type>Checkbox</type>
</CustomField>