Salesforce /unpackaged/main/default/objects/Opportunity/fields/Profit_Commission__c.field-meta.xml
<CustomField>
    <fullName>Profit_Commission__c</fullName>
    <label>Profit Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>