Salesforce /unpackaged/main/default/objects/Opportunity/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <label>Profit Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>