Salesforce /unpackaged/main/default/objects/Opportunity/recordTypes/TechZone_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>TechZone_Opportunity</fullName>
    <active>true</active>
    <businessProcess>TechZone Solutions Sales Process</businessProcess>
    <description>TechZone Solutions Opportunity.</description>
    <label>TechZone Opportunity</label>
</RecordType>